# charge-grid

./: .gitignore  README.md  data.csv  data_hcm.csv  data_q1.csv  edges.csv  env.yml  input.txt  input_q1.txt  mapped_nodes.csv  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: data.csv  district1.csv  district1.txt  fetch_data.py  generate_inp.py
data/input/: input.txt  input_q1.txt  input_q5.txt
data/metadata/: data.csv  data_hcm.csv  data_q1.csv  data_q5.csv  edges.csv  mapped_nodes.csv
data/output/: solution_input_q1_20260321_180742.json  solution_input_q1_20260322_025321.json  solution_input_q1_20260322_164023.json  solution_input_q1_20260322_181133.json  solution_input_q1_20260322_191612.json  solution_input_q1_20260323_060003.json  solution_input_q1_20260323_063050.json  solution_input_q1_20260323_063852.json  solution_input_q1_20260323_065203.json  solution_input_q1_20260323_070100.json  solution_input_q1_20260323_151036.json  solution_input_q1_20260324_015604.json  solution_input_q1_20260324_020837.json  solution_input_q1_20260324_024202.json  solution_input_q1_20260324_033331.json  solution_input_q1_20260324_041846.json  solution_input_q1_20260324_044804.json  solution_input_q1_20260324_114839.json  solution_input_q1_20260324_170911.json  solution_input_q1_20260324_175008.json  solution_input_q1_20260324_180421.json  (+9 more)
docs/html/: _m_i_l_p_8py.html  (+60 more)
src/: MILP.py  build_map.py  experiment.py  genetic_algorith.py  genetic_algorithm.py  graph_dashboard.py  map_script.js  map_style.css  test.ipynb  utils.py  visualize.py
(+193 files in other folders)
