[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charge-grid"
version = "0.1.0"
description = "EV BSS placement optimization"
authors = [
    { name = "Phan Quốc Bảo" },
    { name = "Phan Anh Kiệt" },
    { name = "Đặng Nguyễn Yến Phương"}
]
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["dependencies"] 

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["charge_grid*"]